--- a/ios/Base.lproj/Main.storyboard
+++ b/ios/Base.lproj/Main.storyboard
@@ -13,20 +13,37 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--FourD Description Screen Controller-->
         <scene sceneID="inl-Au-OLh">
             <objects>
-                <viewController id="fw8-gw-HJ0" sceneMemberID="viewController">
+                <viewController id="fw8-gw-HJ0" customClass="FourDDescriptionScreenController" customModule="ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hzn-Zn-NAs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text Body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ka-SR-9mH">
+                                <rect key="frame" x="30" y="118" width="315" height="581"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="TS1-ON-Hhn" firstAttribute="bottom" secondItem="1Ka-SR-9mH" secondAttribute="bottom" constant="30" id="HYf-Bv-pZf"/>
+                            <constraint firstItem="1Ka-SR-9mH" firstAttribute="leading" secondItem="TS1-ON-Hhn" secondAttribute="leading" constant="30" id="N6k-pU-DFE"/>
+                            <constraint firstItem="TS1-ON-Hhn" firstAttribute="trailing" secondItem="1Ka-SR-9mH" secondAttribute="trailing" constant="30" id="go6-fZ-pfL"/>
+                            <constraint firstItem="1Ka-SR-9mH" firstAttribute="top" secondItem="TS1-ON-Hhn" secondAttribute="top" constant="30" id="iai-Ox-0VS"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="TS1-ON-Hhn"/>
                     </view>
+                    <connections>
+                        <outlet property="textBody" destination="1Ka-SR-9mH" id="Dla-ae-G6f"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vWX-ag-ZWt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1498" y="2588"/>
+            <point key="canvasLocation" x="-1498.4000000000001" y="2587.6847290640394"/>
         </scene>
         <!--Situations-->
         <scene sceneID="7Jo-YG-lsg">
@@ -703,12 +720,12 @@
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mZo-6J-zpS">
                                                         <rect key="frame" x="0.0" y="0.0" width="165.66666666666666" height="165.66666666666666"/>
-                                                        <color key="backgroundColor" red="0.0" green="0.23969182372093201" blue="0.44367057085037231" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="backgroundColor" red="0.0" green="0.23921568627450979" blue="0.44313725490196076" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <state key="normal" title="Direct Action">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <segue destination="fw8-gw-HJ0" kind="show" id="oF5-tp-xfe"/>
+                                                            <segue destination="fw8-gw-HJ0" kind="show" identifier="directAction" id="oF5-tp-xfe"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rb4-oh-PZ4">
@@ -718,7 +735,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <segue destination="fw8-gw-HJ0" kind="show" id="knP-tS-x8f"/>
+                                                            <segue destination="fw8-gw-HJ0" kind="show" identifier="delay" id="knP-tS-x8f"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -733,7 +750,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <segue destination="fw8-gw-HJ0" kind="show" id="8fv-Gx-qgz"/>
+                                                            <segue destination="fw8-gw-HJ0" kind="show" identifier="distraction" id="8fv-Gx-qgz"/>
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pAK-l5-Aze">
@@ -743,7 +760,7 @@
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <connections>
-                                                            <segue destination="fw8-gw-HJ0" kind="show" id="ELt-9a-2lD"/>
+                                                            <segue destination="fw8-gw-HJ0" kind="show" identifier="delegation" id="ELt-9a-2lD"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -1049,6 +1066,6 @@ Message Content</string>
         <image name="oldman" width="133" height="133"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ELt-9a-2lD"/>
+        <segue reference="8fv-Gx-qgz"/>
     </inferredMetricsTieBreakers>
 </document>
